--- a/sparkles-hello-world/docker-compose.yml
+++ b/sparkles-hello-world/docker-compose.yml
@@ -5,10 +5,11 @@ services:
   app_proxy:
     environment:
       # The format here is: <app-id>_<docker-service-name>_1
-      APP_HOST: sparkles-hello-world_server_1
-      APP_PORT: 3000
+      APP_HOST: private-chat-server-server_1
+      APP_PORT: 8000
+      NODE_ENV: production
     
   server:
-    image: getumbrel/community-app-store-hello-world:latest
+    image: carloslugones/private-chat-backend:1.1.0
     user: "1000:1000"
     init: true
